[tool.poetry]
name = "data-visulization"
version = "0.1.0"
description = ""
authors = ["amarh-ayman <amarhbishtawi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
seaborn = "^0.11.1"
matplotlib = "^3.4.2"
pandas = "^1.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
